ProdIND/ProdPrograms/force-app/main/default/objects/Golden_Source_Input_Output_Fields__mdt/Golden_Source_Input_Output_Fields__mdt.object-meta.xml
<CustomObject>
    <label>Golden Source Input Output Fields</label>
    <pluralLabel>Golden Source Input Output Fields</pluralLabel>
</CustomObject>