ProdIND/ProdPrograms/force-app/main/default/objects/Golden_Source_Input_Output_Fields__mdt/fields/Input_Fields__c.field-meta.xml
<CustomField>
    <fullName>Input_Fields__c</fullName>
    <inlineHelpText>Voter&apos;s EPIC Number, Driving License Number, Date of Birth , Passport File Number, PAN number,</inlineHelpText>
    <label>Input Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>