ProdIND/ProdPrograms/force-app/main/default/objects/Golden_Source_Input_Output_Fields__mdt/fields/KYC_Type__c.field-meta.xml
<CustomField>
    <fullName>KYC_Type__c</fullName>
    <label>KYC Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voter ID card</fullName>
                <default>true</default>
                <label>Voter ID card</label>
            </value>
            <value>
                <fullName>Driving Licence</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>PAN</fullName>
            </value>
            <value>
                <fullName>Aadhaar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>