ProdIND/ProdPrograms/force-app/main/default/objects/Golden_Source_Input_Output_Fields__mdt/fields/Output_Fields__c.field-meta.xml
<CustomField>
    <fullName>Output_Fields__c</fullName>
    <inlineHelpText>Name of the card holder, Voter ID number, Address of the card holder, Gender of the Card holder, Date of Birth, Age of the Card holder, Name, DL number, Registered address as per Driving License, Passport file number, First Name + Middle name, Last name, Passport number, Address, PAN number, PAN name, Aadhaar number, Name, DOB, Address of the card holder, Gender</inlineHelpText>
    <label>Output Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>